--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./node_modules/formstone/dist/css/carousel.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Слайдеры</title>
+    <title>Слайдер</title>
 </head>
 <body>
     <div style="margin-left: 5em; margin-right: 5em;">
