--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <div class="row">
         
         <div class="col text-left">
-            <button class="previous button-1">Previous</button>
+            <button class="previous button-1">Предыдущий</button>
 
         </div>
         <div class="col text-right">
-            <button class="next button-1 mt-0">Next</button>
+            <button class="next button-1 mt-0">Следующие</button>
 
         </div>
     </div>
