--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         </div>
         <div class="col text-right">
-            <button class="next button-1 mt-0">Следующие</button>
+            <button class="next button-1 mt-0">Следующий</button>
 
         </div>
     </div>
